hphp/hack/test/typecheck/reactive/mutability_flavors2_1.php.exp
File "mutability_flavors2_1.php", line 14, characters 5-6:
Variable $a is undefined, not always defined, or unset afterwards (did you mean $b instead?) (Naming[2050])
